--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
         <button type="submit">Get Weather</button>
     </form>
 
-    <div class="card">
-        <h1 class="cityDisplay">Miami</h1>
-        <p class="tempDisplay">90°</p>
-        <p class="humidityDisplay">Humidity: 75%</p>
-        <p class="descDisplay">Clear Skies</p>
-        <p class="weatherEmoji">☀️</p>
-        <p class="errorDisplay">Please enter a city</p>
+    <div class="card" style="display:none">
     </div>
 
     <script src="script.js"></script>
