--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     </form>
 
     <div class="card" style="display:none">
+        <h1 class="cityDisplay"></h1>
+        <p class="timeDisplay"></p>
+        <p class="tempDisplay"></p>
+        <p class="humidityDisplay"></p>
+        <p class="descDisplay"></p>
+        <p class="weatherEmoji"></p>
     </div>
 
     <script src="script.js"></script>
